# video_me

./: .env  .env.README.md  .env.example  .gitattributes  .gitignore  Agent.md  BUILD_PROGRESS.md  CLAUDE.md  DASHBOARD_IMPLEMENTATION_STATUS.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  ENV_SETUP_GUIDE.md  LORA_TRAINING_AUTOMATED.md  PORTS.md  PRE_FLIGHT_CHECKLIST.md  README.md  READY_TO_DEPLOY.md  UI_PLAN.md  UPGRADE_NOTES.md  WEB_DASHBOARD_CHATBOT_PLAN.md  docker-compose.yml  download_video.py  orchestration-build-plan.md  phase-1-spec-kids-educational.md  project-flow-and-execution-plan.md  pyproject.toml  run_pipeline.py  setup.py
.claude/: settings.local.json
.claude/agents/: pipeline-runner.md  project-status.md  test-runner.md  track-b-setup.md
.claude/memory/: MEMORY.md  (+6 more)
adapters/: __init__.py
assets/: pipeline_flow.html
core/: __init__.py  config.py  executor.py  observability.py  registry.py  router.py  storage.py  workflow.py
guardrails/: __init__.py
loras/: README.md  kids_duo_max.safetensors  kids_duo_zoe.safetensors
scripts/: __init__.py  check_runtime_readiness.py  check_track_b.py  generate_training_images.py  generate_voices.py  redownload_t5.py  run_noop_job.py  setup_gpu.py  setup_gpu.sh  start_services.sh  upload_reference_images.py
services/: __init__.py  chatterbox_server.py  dashboard_api.py  dashboard_repository.py  fish_s2_server.py  musetalk_server.py  wan_server.py
subsystems/: __init__.py
tests/: test_adapt_script.py  test_analyze_content.py  test_assemble_video.py  test_critique.py  test_dashboard_repository.py  test_executor.py  test_fetch_media.py  test_generate_video.py  test_lip_sync.py  test_phase0_models.py  test_phase0_workflow.py  test_plan_shots.py  test_publish.py  test_render_character.py  test_run_pipeline_cli.py  test_runtime_readiness.py  test_setup_gpu.py  test_synthesize_voice.py  test_transcribe.py  test_workflow.py
(+110 files in other folders)
