[project]
name = "video-me"
version = "0.1.0"
description = "Orchestration layer for synthetic educational shorts."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
services = [
  "boto3>=1.34",
  "psycopg[binary]>=3.2",
]
workflow = [
  "prefect>=3.0",
]
ingest = [
  "yt-dlp>=2024.1",
  # ffmpeg and ffprobe must be installed as system packages (not via pip)
]
transcribe = [
  "faster-whisper>=1.0",
  # ctranslate2 is pulled in by faster-whisper; CUDA toolkit required for device="cuda"
]
llm = [
  "openai>=1.0",
  # works with Ollama, vLLM, or any OpenAI-compatible endpoint
]
render = [
  "httpx>=0.27",
  # Stable Diffusion backend (e.g. AUTOMATIC1111) is a separate service; httpx is the HTTP client.
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "adapters*", "guardrails*", "subsystems*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
